Fix some alignments

--- a/css/avatar.css
+++ b/css/avatar.css
@@ -68,9 +68,9 @@
 }
 
 .abilities-info-label {
-    padding-left: 48px;
+    padding-left: 70px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .abilities-search-area {
@@ -101,10 +101,10 @@
 
 .abilities-tag {
     background-color: green;
-    padding-left: 10px;
-    padding-right: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-left: 15px;
+    padding-right: 8px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     margin-right: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
@@ -189,9 +189,9 @@
 }
 
 .priorities-info-label {
-    padding-left: 32px;
+    padding-left: 60px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .priorities-table {
@@ -251,9 +251,9 @@
 }
 
 .missions-info-label {
-    padding-left: 45px;
+    padding-left: 24px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #item0, #btn00, #btn01 { background: #0099FF; }
